Bugfixes: media queries and gameOver function Updated media queries to shrink title and auth links on mobile, also make cards largest at mobile size Updated toggleSelect function to check if cards remain in the deck before declaring the game over if no set is found in the current board.

--- a/app/styles/game-board.scss
+++ b/app/styles/game-board.scss
@@ -125,14 +125,17 @@
 }
 
 @media (max-width: 400px) {
+  .container-fluid {
+    min-width: 100%;
+  }
   .card-container {
     width: 290px;
   }
 
-  .card {
-    height: 76px;
-    width: 52px;
-  }
+  // .card {
+  //   height: 76px;
+  //   width: 52px;
+  // }
   .selected-title {
     font-size: 14px;
   }
